<resources>
    <string name="app_name">Дисплей покупателя</string>
    <string name="welcome_message">Добро пожаловать!</string>

    <!--Start screen-->
    <string name="start_title">Экран покупателя</string>
    <string name="start_empty_text">У вас пока нет изображений для \nотображения на экране покупателя. \nДобавьте их в <annotation type="settings_link">настройках</annotation></string>
    <string name="start_button_start_customer">запустить экран покупателя</string>
    <string name="start_settings_hint">настройки</string>

    <!--Settings screen-->
    <string name="settings_title">Настройки</string>
    <string name="settings_button_add_pictures">Добавить изображения</string>
    <string name="settings_empty_text">Подключите ваш USB-накопитель  с изображениями к Evotor Power и добавьте их в приложение. Для корректного отображения файлы должны иметь соотношение сторон 600 х 1024.\n\nИзбегайте размещения важной информации в верхней части изображения, она может быть перекрыта сервисными текстами «Экрана покупателя».</string>
    <string name="settings_delay">Задержка между слайдами</string>
    <string name="settings_in_rotation">В ротации</string>
    <string name="settings_other">Остальные</string>
    <string name="settings_help_hint">Помощь</string>
    <string-array name="intervals">
        <item>5 секунд</item>
        <item>10 секунд</item>
        <item>15 секунд</item>
        <item>25 секунд</item>
        <item>1 минута</item>
    </string-array>

    <!--Customer display screen-->
    <string name="customer_display_text_placeholder">Добро пожаловать</string>
</resources>