<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/settings_title"
        app:titleTextAppearance="@style/CustomToolbarText"
        app:titleTextColor="@color/text" />

    <Button
        android:id="@+id/settingsButtonAddPictures"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:text="@string/settings_button_add_pictures"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/inRotationTitle"
        style="@style/Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/settings_in_rotation"
        app:layout_constraintTop_toBottomOf="@+id/settingsToolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/settingsPicturesRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:overScrollMode="never"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inRotationTitle"
        tools:itemCount="5"
        tools:listitem="@layout/settings_pictures_rv_item" />

    <TextView
        android:id="@+id/otherTitle"
        style="@style/Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/settings_other"
        app:layout_constraintTop_toBottomOf="@+id/settingsPicturesRV" />

    <LinearLayout
        android:id="@+id/settings_help_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingTop="70dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/settingsButtonAddPictures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsToolbar"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/settings_icon_image_search"
            android:layout_width="@dimen/empty_icon_size"
            android:layout_height="@dimen/empty_icon_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_image_search"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/settings_text_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="@dimen/paragraph_linespacing"
            android:text="@string/settings_empty_text"
            android:textAlignment="textStart"
            android:textColor="@color/text"
            android:textSize="@dimen/paragraph_textsize"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>