<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.start.StartFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/startToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/start_title"
        app:titleTextAppearance="@style/CustomToolbarText"
        app:titleTextColor="@color/text"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/start_button_start_customer"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:background="@color/accent"
        android:fontFamily="@font/roboto_500"
        android:onClick="onClickRunCustomerDisplay"
        android:text="@string/start_button_start_customer"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/start_empty_gallery_hint_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/start_button_start_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startToolbar"
        tools:ignore="UseCompoundDrawables"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/start_icon_empty_gallery"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_empty_gallery"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/start_text_empty_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_400"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6dp"
            android:text="@string/start_empty_text"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/testGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_400"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6dp"
            android:text="Тестовая галерея"
            android:textColor="@color/icon_dark_gray"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/startGalleryRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/start_button_start_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startToolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>